hphp/hack/test/typecheck/records/record_decl_duplicate.php
<?hh

record A {
}

record A {
}
